Fixed sticky header gap

--- a/assets/base.css
+++ b/assets/base.css
@@ -3509,3 +3509,7 @@ details-disclosure > details {
     --border-offset: 0px; /* Prevent the border from growing on buttons when this effect is on. */
   }
 }
+
+.header-wrapper {
+  margin-top: -5px;
+}
